Organizado arquivo de rotas, Criado area administrativa

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Parâmetros Globais
+$cor-primaria: #2E516DFF;
+$cor-secundaria: #2E516DCC;
