--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,14 @@
 // Variables
 @import 'variables';
 
+// Admin
+@import 'templateadmin';
+
+// Público
+@import 'templatepublico';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// JQuery UI
+@import '~jquery-ui/themes/base/all.css';
