--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,6 @@
 
 // JQuery UI
 @import '~jquery-ui/themes/base/all.css';
+
+// FontAwesome
+@import '~@fortawesome/fontawesome-free/css/all.css';
