--- a/resources/sass/_templateadmin.scss
+++ b/resources/sass/_templateadmin.scss
@@ -73,7 +73,7 @@
         background-color: $cor-primaria !important;
     }
 
-    .btn-sm {
+    .btn-add {
         padding: 0.10rem 0.5rem !important;
         font-size: 0.71rem !important;
     }
